--- a/index.html
+++ b/index.html
@@ -221,17 +221,20 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I'm Dharun Vignesh G, PGDCA, BCA, MERN Stack Developer and Java Developer from Madurai, Tamilnadu working in Full Stack Application development and Software Application Development.
+            I love turning complex problems into simple, beautiful and intuitive designs. ❤️
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
+            My job is to build Full Stack Solutions so that it is functional and user-friendly but at the same time attractive.
             Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
+            add personal touch to your product and make sure that is eye-catching (UI) and easy to use (UX). My aim is to bring
             across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            message and identity in the most creative way. I've proven knowledge in Backend Development too in Node.js and Java Springboot Framework. 🧑🏻‍💻
+          </p>
+
+          <p>
+            I'm Open and actively seeking for 💻 Software Development and Full Stack Development Opportunities anywhere at South Indian States (Tamilnadu, Karnataka, Andhra Pradesh, Kerala) 📍
           </p>
         </section>
 
@@ -1134,5 +1137,6 @@
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
+
 
 </html>
