--- a/index.html
+++ b/index.html
@@ -221,16 +221,16 @@
 
         <section class="about-text">
           <p>
-            I'm <span class="about-bold">Dharun Vignesh G, PGDCA, BCA, MERN Stack Developer</span> and <span class="about-bold">Java Developer</span>from Madurai, Tamilnadu working in Full Stack Application development and Software Application Development.
+            I'm Dharun Vignesh G, PGDCA, BCA, MERN Stack Developer and Java Developer from Madurai, Tamilnadu working in Full Stack Application development and Software Application Development.
             I love turning complex problems into simple, beautiful and intuitive designs. ❤️
           </p>
 
           <p>
             My job is to build Full Stack Solutions so that it is functional and user-friendly but at the same time attractive.
             Moreover, I
-            add personal touch to your product and make sure that is eye-catching <span class="about-bold">(UI)</span> and easy to use <span class="about-bold">(UX)</span>. My aim is to bring
+            add personal touch to your product and make sure that is eye-catching (UI) and easy to use (UX). My aim is to bring
             across your
-            message and identity in the most creative way. I've proven knowledge in <span class="about-bold">Backend Development</span> too in <span class="about-bold">Node.js and Java Springboot Framework</span>. 🧑🏻‍💻
+            message and identity in the most creative way. I've proven knowledge in Backend Development too in Node.js and Java Springboot Framework. 🧑🏻‍💻
           </p>
 
           <p>
@@ -1140,4 +1140,5 @@
 
 
 </html>
+
 
