--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src=",/assets/images/crm.png" alt="school crm" loading="lazy">
+                  <img src="./assets/images/crm.png" alt="school crm" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">School CRM</h3>
@@ -1140,6 +1140,7 @@
 
 
 </html>
+
 
 
 
