--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
           <p>
             I'm Open and actively seeking for 💻 Software Development and Full Stack Development Opportunities anywhere at South Indian States (Tamilnadu, Karnataka, Andhra Pradesh, Kerala) 📍
           </p>
+
+          <button class="download-cv" onclick="window.open(`https://github.com/user-attachments/assets/07b36b2e-bddd-4de5-9b0b-dfecf52e0770`)">View Resume</button>
         </section>
 
 
@@ -402,6 +404,11 @@
             </li>
 
           </ul>
+          <div class="dotf">
+            <span class="dotted"></span>
+            <span class="dotted"></span>
+            <span class="dotted"></span>
+          </div>
 
         </section>
 
@@ -608,7 +615,7 @@
 
           </ol>
 
-          <button class="download-cv">Download CV</button>
+          <button class="download-cv" onclick="window.location.href=`https://github.com/user-attachments/files/22003782/Resume-Amz.pdf`">Download CV</button>
 
         </section>
 
