--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </li>
 
           <li class="social-item">
-            <a onclick="window.open(`https://sample-insta`)" class="social-link">
+            <a onclick="window.open(`https://mail.google.com/mail/u/1/?view=cm&fs=1&to=gdvbca@gmail.com&tf=1`)" class="social-link">
               <ion-icon style="color:rgb(245, 146, 146);" name="mail"></ion-icon>
             </a>
           </li>
@@ -1133,4 +1133,5 @@
 
 
 </html>
+
 
