--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
             <button class="navbar-link  active" data-nav-link>About</button>
           </li>
 
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
+          <li class="navbar-item" onclick="document.getElementById(`resume-btn`).style.animation='none';">
+            <button class="navbar-link" id="resume-btn" data-nav-link>Resume</button>
           </li>
 
           <li class="navbar-item">
@@ -1133,5 +1133,6 @@
 
 
 </html>
+
 
 
