--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                   <img src="./assets/images/glossixpro.svg" alt="Henry william" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Clarisco Solutions</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Glossixpro</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -1133,6 +1133,7 @@
 
 
 </html>
+
 
 
 
